<resources>
    <string name="app_name">Find Place</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="places">Places</string>
    <string name="inspiration">Inspiration</string>
    <string name="suggestion">Suggestion</string>
    <string name="explore_more">Explore more</string>
    <string name="see_all">See all</string>
    <string name="discover">Discover</string>
    <string name="book_trip_now">Book Trip Now</string>
    <string name="description">Description</string>
    <string name="_1">1</string>
    <string name="number_of_people_in_your_group">Number of people in your group</string>
    <string name="people">People</string>
    <string name="dolor">$</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
</resources>